[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Healthbar/Over.png" type="Texture" id=1]
[ext_resource path="res://Player/Healthbar/Below.png" type="Texture" id=2]
[ext_resource path="res://Player/Healthbar/Progress.png" type="Texture" id=3]
[ext_resource path="res://Player/Healthbar/Healthbar.gd" type="Script" id=4]
[ext_resource path="res://UI/Gamer.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="Healthbar" type="Control"]
script = ExtResource( 4 )
healthy_color = Color( 0.145098, 0.709804, 0.145098, 1 )
caution_color = Color( 0.74902, 0.74902, 0.105882, 1 )
danger_color = Color( 0.698039, 0.121569, 0.121569, 1 )

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 128.0
margin_bottom = 40.0
value = 70.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.388235, 0.054902, 0.054902, 1 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 128.0
margin_bottom = 16.0
value = 50.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 3 )

[node name="HPlabel" type="Label" parent="HealthUnder"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -7.0
margin_right = 63.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "100/50"
align = 1

[node name="UpdateTween" type="Tween" parent="."]
